--- a/docs/docs/03-Input/03-Command/API.mdx
+++ b/docs/docs/03-Input/03-Command/API.mdx
@@ -482,7 +482,7 @@ type Model[T CmdMetadataAccessor] struct {
 func New[T CmdMetadataAccessor](opts ...Option[T]) *Model[T]
 ```
 
-New creates a new model
+New creates a new model.
 
 ### func \(Model\[T\]\) [AllTokensBeforeCursor](<https://github.com/aschey/bubbleprompt/blob/main/input/commandinput/model.go#L524>)
 
